--- a/app/views/documentation.scala.html
+++ b/app/views/documentation.scala.html
@@ -15,7 +15,17 @@
 	    <link rel="stylesheet" media="screen" href="@routes.Assets.at("third/bootstrap/js/google-code-prettify/prettify.css")">
 		<link rel="stylesheet" media="screen" href="@routes.Assets.at("third/bootstrap/css/bootstrap-theme.css")">
 		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-		<link rel="shortcut icon" type="image/ico" href="@routes.Assets.at("images/favicon.ico")">
+		<link rel="shortcut icon" type="image/ico" href="@routes.Assets.at("images/favicon/favicon.ico")">
+
+		<link rel="apple-touch-icon" sizes="180x180" href="@routes.Assets.at("images/favicon/apple-touch-icon.png")">
+		<link rel="icon" type="image/png" sizes="32x32" href="@routes.Assets.at("images/favicon/favicon-32x32.png")">
+		<link rel="icon" type="image/png" sizes="16x16" href="@routes.Assets.at("images/favicon/favicon-16x16.png")">
+		<link rel="manifest" href="@routes.Assets.at("images/favicon/site.webmanifest")">
+		<link rel="mask-icon" href="@routes.Assets.at("images/favicon/safari-pinned-tab.svg")" color="#603cba">
+		<link rel="shortcut icon" href="@routes.Assets.at("images/favicon/favicon.ico")">
+		<meta name="msapplication-TileColor" content="#603cba">
+		<meta name="msapplication-config" content="@routes.Assets.at("images/favicon/browserconfig.xml")">
+		<meta name="theme-color" content="#ffffff">
 
 		<script src="@routes.Assets.at("third/angularjs/angular.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("third/angularjs/angular-resource.min.js")" type="text/javascript"></script>
