--- a/app/views/documentation.scala.html
+++ b/app/views/documentation.scala.html
@@ -70,26 +70,26 @@
 		<div class="container" data-ng-controller="MainController" id="Weather results">
 	 		<div class="row clearfix">
 	 			<div class="span12 column col-md-12" style="margin-left: 0px;">
-				 	<div>				
-						<h1 class="code-line" data-line-start=0 data-line-end=1 ><a id="Goals_0"></a>Goals:</h1>
+				 	<div style="word-wrap: break-word;">				
+						<h1 class="code-line" data-line-start=0 data-line-end=1 ><a id="Goals_0"></a>Goals</h1>
 						<p class="has-line-data" data-line-start="1" data-line-end="2">Create a project that illustrates what you’ve done this semester. You have quite a bit of leeway on this project, so pick something interesting. Ideal projects will illustrate the primary ideas of this course.</p>
 						<br/>
 						<br/>
-						<h1 class="code-line" data-line-start=3 data-line-end=4 ><a id="Termal_is_Deployed_to_Heroku_3"></a>Termal is Deployed to Heroku</h1>
+						<h1 class="code-line" data-line-start=3 data-line-end=4 ><a id="Termal_is_Deployed_to_Heroku_3"></a>Termal is Deployed to Heroku:</h1>
 						<p class="has-line-data" data-line-start="4" data-line-end="8">The Termal Application has been deployed to Heroku using the Heroku Git and Play Framework deployment integration. To visit and interact with the deployed web application, please, point your browser to:
 						<br/>
 						<br/>
-						- <a href="https://termalapp.herokuapp.com/">https://termalapp.herokuapp.com/</a>
+						<a href="https://termalapp.herokuapp.com/">https://termalapp.herokuapp.com/</a>
 						<br/>
 						<br/>
 						<h1 class="code-line" data-line-start=3 data-line-end=4 ><a id="Termal_is_Deployed_to_Heroku_3"></a>Documentation</h1>
 						To view documentation in production visit:
 						<br/>
 						<br/>
-						- <a href="https://termalapp.herokuapp.com/documentation">https://termalapp.herokuapp.com/documentation</a></p>
+						<a href="https://termalapp.herokuapp.com/documentation">https://termalapp.herokuapp.com/documentation</a></p>
 						<br/>
 						<br/>
-						<h1 class="code-line" data-line-start=9 data-line-end=10 ><a id="Overview_9"></a>Overview:</h1>
+						<h1 class="code-line" data-line-start=9 data-line-end=10 ><a id="Overview_9"></a>Overview</h1>
 						<p class="has-line-data" data-line-start="10" data-line-end="11">termal allows users to input Zip Codes, separated by commas, into the input field. Temperatures for those Zip Codes are fetched from the Accuweather™ API when the user clicks enter or the search button. Fetched data is parsed and displayed in view in the UI. This web application uses MVC design pattern to fully separate view from controller and model (we are not using the model in MVC, as we are not saving anything to a database. Fetched JSON data is also stored in Weather and Location Java classes of application for future use and potential integration with a database. This application uses a number of different technologies to accomplish the previously mentioned goals. The application was developed as part of my learning process for feeling out the following technology stack: Java, Play! Framework 2.2.6, JavaScript, AngularJS, LoDashJS, HTML, CSS, Twitter Bootstrap, Heroku’s Git &amp; Play! app deployment integration, and the Accuweather API and ipify API.</p>
 						<br/>
 						<br/>
@@ -97,7 +97,7 @@
 						<p class="has-line-data" data-line-start="13" data-line-end="15">To install play on your local machine please visit the following Play Framework installation webpage at:
 						<br/>
 						<br/>
-						- <a href="https://www.playframework.com/documentation/2.2.x/Installing">https://www.playframework.com/documentation/2.2.x/Installing</a></p>
+						<a href="https://www.playframework.com/documentation/2.2.x/Installing">https://www.playframework.com/documentation/2.2.x/Installing</a></p>
 						<br/>
 						<br/>
 						<h1 class="code-line" data-line-start=16 data-line-end=17 ><a id="Running_Play_Framework_Application_16"></a>Running Play Framework Application</h1>
@@ -109,11 +109,11 @@
 						- you should then be able to see Termal running locally on your machine.</p>
 						<br/>
 						<br/>
-						<h1 class="code-line" data-line-start=24 data-line-end=25 ><a id="Input_24"></a>Input:</h1>
+						<h1 class="code-line" data-line-start=24 data-line-end=25 ><a id="Input_24"></a>Input</h1>
 						<p class="has-line-data" data-line-start="25" data-line-end="26">The user inputs comma separated zip codes into the input box. Temperatures for those zip codes are fetched from the Accuweather API when the user presses enter or clicks the search button.</p>
 						<br/>
 						<br/>
-						<h1 class="code-line" data-line-start=27 data-line-end=28 ><a id="Output_27"></a>Output:</h1>
+						<h1 class="code-line" data-line-start=27 data-line-end=28 ><a id="Output_27"></a>Output</h1>
 						<ul style="margin-left:5%;">
 						<li class="has-line-data" data-line-start="28" data-line-end="29">JSON data results of fetched zip codes made to Accuweather API are displayed in the UI and styled with Twitter Bootstrap for liquid design purposes.</li>
 						<li class="has-line-data" data-line-start="29" data-line-end="30">The Application uses Twitter Bootstrap in order to recalculate layout depending on users browser window size. Making the web application display data seamlessly regardless of device user is on.</li>
@@ -124,7 +124,7 @@
 						<li class="has-line-data" data-line-start="34" data-line-end="35">JSON object of the first zip code entered is also output to view.</li>
 						<li class="has-line-data" data-line-start="35" data-line-end="36">A table with returned JSON objects is also output to view.</li>
 						<li class="has-line-data" data-line-start="36" data-line-end="51">In each weather information div containers the following information is displayed:
-						<ul>
+						<ul style="margin-left:10%!important;">
 						<li class="has-line-data" data-line-start="37" data-line-end="38">City name</li>
 						<li class="has-line-data" data-line-start="38" data-line-end="39">Weather text (e.g. cloudy, sunny, etc.)</li>
 						<li class="has-line-data" data-line-start="39" data-line-end="40">Feels like (in Celsius and Fahrenheit)</li>
@@ -146,7 +146,7 @@
 						</ul>
 						<br/>
 						<br/>
-						<h1 class="code-line" data-line-start=54 data-line-end=55 ><a id="Steps_54"></a>Steps:</h1>
+						<h1 class="code-line" data-line-start=54 data-line-end=55 ><a id="Steps_54"></a>Steps</h1>
 						<p class="has-line-data" data-line-start="55" data-line-end="56">For this program we have one main function called index() and documentation() in Application.java which is handled by the play framework to render the index.scala.html page and the documentation.scala.html page respectively. The following functions are then used.</p>
 						<ul style="margin-left:5%;">
 						<li class="has-line-data" data-line-start="57" data-line-end="58">
@@ -166,7 +166,7 @@
 						</li>
 						<li class="has-line-data" data-line-start="63" data-line-end="66">
 						<p class="has-line-data" data-line-start="63" data-line-end="64">getAllLocations() parses zipcodes, maps zipcode and promises to return an array of location keys and makes an http request to Accuweather Location API for each zip code entered. This is necessary to obtain the Location Key of each zip code in order to make a HTTP GET request to the Accuweather Current Conditions API which uses the Location Key and API key as part of the HTTP GET request URL, instead of a zip code. Since the Accuweather Current Conditions API does not take a zip code as a parameter and instead uses a Location Key, this is a necessary step.</p>
-						<ul>
+						<ul style="margin-left:10%!important;">
 						<li class="has-line-data" data-line-start="64" data-line-end="65">Make a HTTP GET request to Accuweather Locations API to return Location Key for Accuweather Current Conditions API using the following URL replacing ZIPCODE_HERE with user inputed zip code values and API_KEY with API key.</li>
 						<li class="has-line-data" data-line-start="65" data-line-end="66"><a href="https://dataservice.accuweather.com/locations/v1/postalcodes/US/search?apikey=API_KEY&amp;q=ZIPCODE_HERE">https://dataservice.accuweather.com/locations/v1/postalcodes/US/search?apikey=API_KEY&amp;q=ZIPCODE_HERE</a></li>
 						</ul>
@@ -176,7 +176,7 @@
 						</li>
 						<li class="has-line-data" data-line-start="67" data-line-end="71">
 						<p class="has-line-data" data-line-start="67" data-line-end="68">getAllTemps() we can then call the function getAllTemps() for each zip code entered with the returned Location Key information obtained from Accuweather Locations API in order to obtain Current weather Conditions for each zip code entered.</p>
-						<ul>
+						<ul style="margin-left:10%!important;">
 						<li class="has-line-data" data-line-start="68" data-line-end="69">The Accuweather Current Conditions API uses the Location Key obtained from Accuweather Location API HTTP GET request to return a JSON object of current conditions for each location key requested.</li>
 						<li class="has-line-data" data-line-start="69" data-line-end="70">Makes a HTTP GET request to the Accuweather Current Conditions API using the location key obtained from Accuweather Locations API for each zip code entered using the following URL replacing LOC_KEY with the returned values for Location Key of the Locations API HTTP GET request and API_KEY with API key</li>
 						<li class="has-line-data" data-line-start="70" data-line-end="71"><a href="https://dataservice.accuweather.com/currentconditions/v1/LOC_KEY?apikey=API_KEY&amp;details=true">https://dataservice.accuweather.com/currentconditions/v1/LOC_KEY?apikey=API_KEY&amp;details=true</a></li>
@@ -184,7 +184,7 @@
 						</li>
 						<li class="has-line-data" data-line-start="71" data-line-end="76">
 						<p class="has-line-data" data-line-start="71" data-line-end="72">getAllTempsPrecipitation() for precipitation probability we have to make another HTTP GET request to a separate Accuweather API called Forecast API, specifically the 1 Day of Daily Forecasts get method of the Accuweather Forecast API.</p>
-						<ul>
+						<ul style="margin-left:10%!important;">
 						<li class="has-line-data" data-line-start="72" data-line-end="73">The Accuweather Forecast API URL, similarly to the Current Conditions API URL does not take a zip code as a parameter, but rather a Location Key obtained from the HTTP GET request made to the Accuweather Locations API.</li>
 						<li class="has-line-data" data-line-start="73" data-line-end="74">Since we have already obtained the Location Keys for each zip code previously in the getAllLocations() function it is unecessary to make a new call to the Accuweather Locations API so we instead use the same values to make the Forecast API HTTP GET request.</li>
 						<li class="has-line-data" data-line-start="74" data-line-end="75">Makes a HTTP GET request to the Accuweather Forecast API using the location key obtained from Accuweather Locations API for each zip code entered using the following URL replacing LOC_KEY with the returned values for Location Key of the Locations API HTTP GET request and API_KEY with API key</li>
@@ -196,13 +196,13 @@
 						</li>
 						<li class="has-line-data" data-line-start="77" data-line-end="79">
 						<p class="has-line-data" data-line-start="77" data-line-end="78">getIpLocation() is similar to getAllLocations() but instead it uses the Accuweather Locations API IP Address Search get method to obtain a Location Key instead of the Accuweather Locations API Postal Code Search get method.</p>
-						<ul>
+						<ul style="margin-left:10%!important;">
 						<li class="has-line-data" data-line-start="78" data-line-end="79">getIpLocation() then also uses that Location Key to call getAllTemps() and getAllTempsPrecipitation()</li>
 						</ul>
 						</li>
 						<li class="has-line-data" data-line-start="79" data-line-end="88">
 						<p class="has-line-data" data-line-start="79" data-line-end="80">savePostData() makes HTTP POST request to the /save URL which is handled by the Play Framework routes to call the controllers.ApiController.savePost() method in Controllers -&gt; ApiController -&gt; savePost()</p>
-						<ul>
+						<ul style="margin-left:10%!important;">
 						<li class="has-line-data" data-line-start="80" data-line-end="81">in main.js in under MainControllers implementation of savePostData() two objects are created one for weather and one for location</li>
 						<li class="has-line-data" data-line-start="81" data-line-end="82">a mergedlist is instantiated with weather and location data which is pushed to locations and weathers arrays</li>
 						<li class="has-line-data" data-line-start="82" data-line-end="83">pushed data is stored in postData which is the argument the savePostData function takes as input.</li>
@@ -215,7 +215,7 @@
 						</li>
 						<li class="has-line-data" data-line-start="88" data-line-end="92">
 						<p class="has-line-data" data-line-start="88" data-line-end="89">In index.scala.html the appropriate weather information is displayed in a weather information div container that uses the AngularJS ‘ng-repeat’ to display each of the zip codes weather information in separate containers passing the data handled by AngularJS to the view via the data-ng-controller=“MainController” -&gt; ng-repeat=“result in processedData” AngularJS HTML tags</p>
-						<ul>
+						<ul style="margin-left:10%!important;">
 						<li class="has-line-data" data-line-start="89" data-line-end="90">the getTemps() function in AngularJS demoApp.controller(“MainController”, function($scope, Service, $q) is called from the view in index.scala.html as an onClick action when the user presses enter or clicks the search button using the data-ng-click=“getTemps()” AngularJS HTML tag.</li>
 						<li class="has-line-data" data-line-start="90" data-line-end="91">index.scala.html then renders the JSON object of the first zip code entered and outputs it to the UI</li>
 						<li class="has-line-data" data-line-start="91" data-line-end="92">index.scala.html then renders the JSON object of each zip code fetched from the Accuweather API in a Table format.</li>
@@ -230,7 +230,7 @@
 	 	<footer class="footer">
 	 		<div class="container">
  				<p>Designed &amp; developed by <a href="http://twitter.com/tajunker" target="_blank">@@tajunker</a>.</p>
- 				<p>SimpleWeather uses <a href="http://www.playframework.com" target="_blank">Play!</a>, <a href="http://angularjs.org" target="_blank">AngualarJS</a>, and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a>.</p>
+ 				<p>termal uses <a href="http://www.playframework.com" target="_blank">Play!</a>, <a href="http://angularjs.org" target="_blank">AngualarJS</a>, and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a>.</p>
  				<p>Deployed to <a href="https://www.heroku.com/" target="_blank">Heroku's</a> cloud computing web application hosting platform.</p>
  				<p>termal uses <a href="http://www.accuweather.com/" target="_blank">accuweather.com</a> API - The JSON Weather&#8482; API for Developers.</p>
  				<ul class="footer-links">
