--- a/app/views/documentation.scala.html
+++ b/app/views/documentation.scala.html
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-         
+
 	 	<!-- Subhead ================================================== -->
 	 	<header class="jumbotron subhead" id="overview">
 			  <div class="container">
@@ -260,6 +260,15 @@
 		
 		</script>
 		-->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154365486-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-154365486-1');
+		</script>
 	 	<script src="@routes.Assets.at("third/jquery/jquery-1.10.2.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("third/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js" type="text/javascript"></script>
