minor changes to footer and documentation

--- a/app/views/documentation.scala.html
+++ b/app/views/documentation.scala.html
@@ -116,8 +116,8 @@
 						<br/>
 						<br/>
 						<h1 class="code-line" data-line-start=27 data-line-end=28 ><a id="Output_27"></a>Output</h1>
+						<p class="has-line-data" data-line-start="25" data-line-end="26">JSON data results of fetched zip codes made to Accuweather API are displayed in the UI and styled with Twitter Bootstrap for liquid design purposes and displayed in UI in index.scala.html.</p>
 						<ul style="margin-left:5%;">
-						<li class="has-line-data" data-line-start="28" data-line-end="29">JSON data results of fetched zip codes made to Accuweather API are displayed in the UI and styled with Twitter Bootstrap for liquid design purposes.</li>
 						<li class="has-line-data" data-line-start="29" data-line-end="30">The Application uses Twitter Bootstrap in order to recalculate layout depending on users browser window size. Making the web application display data seamlessly regardless of device user is on.</li>
 						<li class="has-line-data" data-line-start="30" data-line-end="31">Web application renders layout as a mobile application if user is accessing webpage from a mobile device or tablet, and as a standard webpage if on a computer or laptop, adapting to size of user’s browser window.</li>
 						<li class="has-line-data" data-line-start="31" data-line-end="32">If on a mobile device or tablet, user can save application to Home Screen and appropriate .ico files are utilized in order to make it appear as a native mobile OS application on user’s device homescreen.</li>
@@ -232,9 +232,9 @@
 	 	<footer class="footer">
 	 		<div class="container">
  				<p>Designed &amp; developed by <a href="http://twitter.com/tajunker" target="_blank">@@tajunker</a>.</p>
- 				<p>termal uses <a href="http://www.playframework.com" target="_blank">Play!</a>, <a href="http://angularjs.org" target="_blank">AngualarJS</a>, and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a>.</p>
+ 				<p>Termal uses <a href="http://www.playframework.com" target="_blank">Play!</a>, <a href="http://angularjs.org" target="_blank">AngualarJS</a>, and <a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a>.</p>
  				<p>Deployed to <a href="https://www.heroku.com/" target="_blank">Heroku's</a> cloud computing web application hosting platform.</p>
- 				<p>termal uses <a href="http://www.accuweather.com/" target="_blank">accuweather.com</a> API - The JSON Weather&#8482; API for Developers.</p>
+ 				<p>Termal uses <a href="http://www.accuweather.com/" target="_blank">accuweather.com</a> API - The JSON Weather&#8482; API for Developers.</p>
  				<ul class="footer-links">
 		        	<li><a target="_blank" href="http://www.linkedin.com/in/tajunker">LinkedIn</a></li>
 		        	<li class="muted">&middot;</li>
