copy changes to documentation

--- a/app/views/documentation.scala.html
+++ b/app/views/documentation.scala.html
@@ -77,7 +77,7 @@
 						<p class="has-line-data" data-line-start="1" data-line-end="2">Create a project that illustrates what you’ve done this semester. You have quite a bit of leeway on this project, so pick something interesting. Ideal projects will illustrate the primary ideas of this course.</p>
 						<br/>
 						<br/>
-						<h1 class="code-line" data-line-start=3 data-line-end=4 ><a id="Termal_is_Deployed_to_Heroku_3"></a>Termal is Deployed to Heroku:</h1>
+						<h1 class="code-line" data-line-start=3 data-line-end=4 ><a id="Termal_is_Deployed_to_Heroku_3"></a>Termal is Deployed to Heroku</h1>
 						<p class="has-line-data" data-line-start="4" data-line-end="8">The Termal Application has been deployed to Heroku using the Heroku Git and Play Framework deployment integration. To visit and interact with the deployed web application, please, point your browser to:
 						<br/>
 						<br/>
